[package]
name = "thorium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
custom_error = "1.9.2"
num_enum = "0.6.1"
qsv_docopt = "1"
rprompt = "2.0.2"
serde = { version = "1", features = ["derive"] }
